# casper-shorts

./: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  README.md  TODO.md  TRADING_COMPETITION.md  justfile
casper-short-bot-ma/: Cargo.toml
casper-short-bot-ma/src/: main.rs
casper-shorts-bot/: Cargo.toml
casper-shorts-bot-random/: Cargo.toml
casper-shorts-bot-random/src/: main.rs
casper-shorts-bot/src/: lib.rs  runnner.rs  strategy.rs
casper-shorts-bot/src/runnner/: backtesting.rs  live.rs
casper-shorts-charts/: Cargo.toml
casper-shorts-charts/src/: lib.rs  main.rs
casper-shorts-client/: Cargo.toml
casper-shorts-client/resources/: deployed_contracts.toml  historical_data.csv
casper-shorts-client/src/: actions.rs  cli.rs  coinmarketcap.rs  deployed_contracts.rs  lib.rs  main.rs  models.rs  price.rs
casper-shorts-client/src/bots/: mod.rs  runnner.rs  strategy.rs
casper-shorts-client/src/bots/traders/: mod.rs  random_trader.rs
casper-shorts-contracts/: Cargo.toml
casper-shorts-contracts/src/: address_pack.rs  cep18.rs  config.rs  events.rs  lib.rs  market.rs  system.rs  token_long.rs  token_short.rs  token_wcspr.rs
casper-shorts-contracts/tests/: test_casper_shorts.rs
casper-shorts-contracts/tests/common/: mod.rs  params.rs  utils.rs  world.rs
casper-shorts-contracts/tests/features/: market.feature  setup.feature  transfer_interface.feature
casper-shorts-contracts/tests/steps/: balances.rs  market_steps.rs
casper-shorts-contracts/wasm/: Cep18.wasm  Market.wasm  TokenLong.wasm  TokenShort.wasm  TokenWCSPR.wasm
src/: cep18.rs  lib.rs  market.rs  price_data.rs
tests/: test_casper_shorts.rs
tests/common/: params.rs  world.rs
tests/features/: market.feature  setup.feature
tests/steps/: balances.rs  market_steps.rs  mod.rs
whitepaper/: whitepaper.html  whitepaper.md
