[package]
name = "casper-shorts-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-shorts-contracts = { path = "../casper-shorts-contracts" }
chrono = { version = "0.4", features = ["serde"] }
odra = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
odra-casper-livenet-env = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
odra-test = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
casper-shorts-client = { path = "../casper-shorts-client" }
