[package]
name = "casper-shorts-client"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-shorts-contracts = { path = "../casper-shorts-contracts" }
chrono = { version = "0.4", features = ["serde"] }
odra = { version = "1.0.0", features = [], default-features = false }
odra-casper-livenet-env = { version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0", features = ["default"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml = "0.8.13"
clap = { version = "4.5.4", features = ["derive"] }
prettycli = "0.1.1"

[[bin]]
name = "casper-shorts-client"
path = "src/main.rs"
test = false
bench = false