[package]
name = "casper-shorts-client"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-shorts-contracts = { path = "../casper-shorts-contracts" }
chrono = { version = "0.4", features = ["serde"] }
odra = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
odra-casper-livenet-env = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "1.0", features = ["default"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
toml = "0.8.13"
clap = { version = "4.5.4", features = ["derive"] }
prettycli = "0.1.1"
rand = "0.8.4"
thiserror = "1.0.61"
csv = "1.3.0"

[[bin]]
name = "casper-shorts-client"
path = "src/main.rs"
test = false
bench = false