[package]
name = "casper-shorts-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "1.0.0", features = [], default-features = false }
odra-modules = { version = "1.0.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { version = "1.0.0", features = [], default-features = false }
cucumber = "0.19.1"
futures = "0.3"

[build-dependencies]
odra-build = { version = "1.0.0", features = [], default-features = false }

[[bin]]
name = "casper_shorts_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_shorts_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "plots"
path = "bin/plots.rs"
test = false
required-features = ["plots"]

[[test]]
name = "test_casper_shorts"
harness = false
