[package]
name = "casper-shorts-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }
odra-modules = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }

[dev-dependencies]
odra-test = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = ["bdd"], default-features = false }
cucumber = "0.21.1"

[build-dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "feature/test-bdd", features = [], default-features = false }

[[bin]]
name = "casper_shorts_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "casper_shorts_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[test]]
name = "test_casper_shorts"
harness = false
